--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,15 @@ html {
 }
 
 body {
-  background-color: gray;
+  background: hsla(270, 98%, 60%, 1);
+
+  background: linear-gradient(180deg, hsla(270, 98%, 60%, 1) 33%, hsla(164, 100%, 47%, 1) 100%);
+  
+  background: -moz-linear-gradient(180deg, hsla(270, 98%, 60%, 1) 33%, hsla(164, 100%, 47%, 1) 100%);
+  
+  background: -webkit-linear-gradient(180deg, hsla(270, 98%, 60%, 1) 33%, hsla(164, 100%, 47%, 1) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9835FD", endColorstr="#00EEAD", GradientType=1 );
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -44,4 +52,9 @@ h1 {
 }
 img{
   border-radius: 50%;
+}
+.header{
+  display: grid;
+  justify-content: center;
+  
 }
