--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,11 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
+  <a href="/auth/google" class="siwg-link">
+    <button type="submit" class="siwg">
+      <img id="siwg-image" alt="Sign in with Google" />
+    </button>
+  </a>
   <% if (user?.profile.avatar) { %>
     <div>
       <img 
