--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,10 +34,12 @@ body {
 }
 
 nav {
-  background-color: white;
   font-size: 1.6rem;
   display: flex;
-  justify-content: center;
+  height: 100vh;
+  position: fixed;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
@@ -45,6 +47,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-left: 5rem;
 }
 
 h1 {
@@ -57,4 +60,11 @@ img{
   display: grid;
   justify-content: center;
   
+}
+/* #siwg-image,
+button.siwg{
+  display: none;
+} */
+ul{
+  list-style: none;
 }
