Add complete nav bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,12 @@
 <%- include('./partials/nav') %>
 
 <main>
+  <% if (!user) { %>
   <a href="/auth/google" class="siwg-link">
     <button type="submit" class="siwg">
       <img id="siwg-image" alt="Sign in with Google" />
     </button>
+    <% } %>
   </a>
   <% if (user?.profile.avatar) { %>
     <div>
