--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,13 +33,10 @@ body {
   margin: 0;
 }
 
-nav {
+.navbar {
   font-size: 1.6rem;
-  display: flex;
   height: 100vh;
   position: fixed;
-  flex-direction: column;
-  align-items: center;
 }
 
 main {
@@ -65,6 +62,9 @@ img{
 button.siwg{
   display: none;
 } */
-ul{
+.nav-ul{
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
