--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -9,5 +9,10 @@
     <link rel="manifest" href="/site.webmanifest"> -->
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title><%= title %></title>
-    <h1 class="header">BEEPER</h1>
+    <div class="header-div">
+      <!-- <div class="logo"><img src="/public/images/pager_favicon/android-chrome-192x192.png" alt="">
+      </div> -->
+      <h1 class="header">BEEPER</h1>
+    </div>
+    
     
