--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,6 +5,8 @@
 <% if (user) { %>
 <body>
   <nav class="navbar">
+    <div class="logo"><img src="/public/images/pager_favicon/android-chrome-192x192.png" alt="">
+    </div>
     <% if (user?.profile.avatar) { %>
       <div>
         <img 
