--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
           src="<%= user.profile.avatar %>" 
           alt="<%= user.profile.name %> avatar"
         >
-        <form action="POST" method="post">
-          <input type="text">
+        <form action="" method="POST" class="post-form">
+          <input type="text" name="content">
           <button type="submit">New Post</button>
         </form>
       </div>
