add posts model

--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -12,5 +12,9 @@
     <div class="header-div">
       <h1 class="header">BEEPER</h1>
     </div>
+    <% if (!user) { %>
+      <link rel="stylesheet" href="/stylesheets/siwg.css">
+    <% } %>
+  </head>
     
     
