--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,8 +22,9 @@ head{
 .header-div{
   display: grid;
   grid-template-areas: " h1 ";
-  /* position: absolute; */
+  background: yellow;
 }
+
 .header{
   display: flex;
   justify-content: center;
@@ -82,13 +83,13 @@ h1 {
 
 .section-1{
   width: 50%;
-  height: 100vh;
+  height: 100vw;
   background-color: aquamarine;
   margin-left: 5px;
 }
 .section-2{
   width: 50%;
-  height: 100vh;
+  height: 100vw;
   background-color: aquamarine;
   margin-left: 5px;
 }
