--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,15 +17,16 @@
           src="<%= user.profile.avatar %>" 
           alt="<%= user.profile.name %> avatar"
         >
-        <form action="" method="POST" class="post-form">
+        <form action="/posts" method="POST" class="post-form">
           <input type="text" name="content">
           <button type="submit">New Post</button>
         </form>
       </div>
     <% } %> 
+    
+      </div>
   </section>
   <section class="section-2">
-
   </section>
 </main>
 <form
