--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,3 +104,11 @@ h1 {
   height: 96px;
   width: 96px;
 }
+.post-box li{
+  font-size: 2.5rem;
+  list-style: none;
+  height: 75px;
+  width: 476px;
+  background-color: bisque;
+  margin: 2px;
+}
