--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -10,7 +10,6 @@
     </div>
   </head>
 <body>
-    <body>
       <nav class="navbar">
         <div class="logo"><img src="/public/images/pager_favicon/android-chrome-192x192.png" alt="">
         </div>
@@ -49,15 +48,15 @@
       </nav>
       <main>
         <section class="section-1">
-          <div>              
-            <% posts.forEach(p => { %>
-              <div>
-                <%= p.name %>
-                <%= p.content %>
-                <% }) %> 
-                </div>
+          <% posts.forEach(post => { %>
+          <div class="post-box">
+            <li>
+              <%= post.profile %> 
+              <%= post.content %> 
+            </li>
+              <% }) %>
+          </div>
         </section>
       </main>
-      <form
 </body>
 </html>
