Add specific post view

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -53,6 +53,7 @@
             <li>
               <%= post.profile %> 
               <%= post.content %> 
+              <a href="/posts/<%= post._id %>">💬</a>
             </li>
               <% }) %>
           </div>
