--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,10 @@ head{
   flex-direction: column;
   align-items: center;
 }
+.nav-ul li{
+  margin: 5px;
+}
+
 .nav-list:last-child{
   margin-top: auto;
 }
