--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -12,5 +12,10 @@
     <input type="text" name="content" placeholder="update">
     <button type="submit">New Content</button>
   </form>
+  <p>ytfgvj</p>
+  <p>vebervub</p>
+  <p>hb fhjvbe</p>
+  <p>jhbfhjvbevb</p>
+  <div class="curve"></div>
 </body>
 </html>                   
