--- a/public/stylesheets/siwg.css
+++ b/public/stylesheets/siwg.css
@@ -43,3 +43,33 @@
   position: absolute;
   width: 1px; 
 }
+
+
+
+.curve{
+  position: absolute;
+  height: 225px;
+  width: 100%;
+  bottom: 0;
+}
+.curve ::before{
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  background-color: aquamarine;
+  transform: translate(85%, 60%);
+}
+.curve ::after{
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  background-color: cadetblue;
+  transform: translate(-4%, 40%);
+  z-index: -1;
+}
