--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -149,6 +149,12 @@ h1 {
   word-break: break-word;
   overflow: auto;
 }
+
+.replies-div{
+  background: #3C86AC;
+  height: 200px;
+  width: min-content;
+}
 /* 
 .curve{
   position: absolute;
