Add extra post styling

--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   height: 100%;
+  display: grid;
 }
 
 /* The Universal Selector */
@@ -17,133 +18,29 @@ html {
 :root {
     font-size: 62.5%
 }
-head{
-  position: fixed;
-}
-.header-div{
-  display: grid;
-  grid-template-areas: " h1 ";
-  position:fixed;
-    top:0;
-    width:100%;
-    z-index:100;
-    background-color: #d5c6e2;
-}
-.header{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.logo{
-  width: 192px;
-  height: 192px;
-  display: inline-block;
-  background: url(/public/images/pager_favicon/android-chrome-192x192.png);
-}
-.navbar {
-  background-color: #d5c6e2;
-  font-size: 1.6rem;
-  height: 100vh;
-  width: 10rem;
-  position: fixed;
-}
-.nav-ul{
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.nav-ul li{
-  margin: 5px;
-}
 
-.nav-list::last-child{
-  margin-top: auto;
-}
-body {
-  background-image: linear-gradient(to left, #551a8b, #5d2691, #663196, #6e3c9c, #7646a1, #8259ac, #8e6bb7, #9b7ec1, #b19ed2, #c9bee2, #e3def1, #ffffff);
-  /* Use a system font, if none are available use an available sans-sarif font */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  margin: 0;
+body{
+  margin: 0%;
   height: 100%;
-}
-
-
-main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  margin-left: 10rem;
-  height: 100%;
-}
-
-h1 {
-  font-size: 3.6rem;
-}
-
-.section-1{
-  width: 50%;
-  height: 100vw;
-  background-color: #DCEEFB;
-  margin-left: 5px;
-  margin-top: 9rem;
-}
-.section-2{
-  width: 50%;
-  height: 100vw;
-  background-color: #DCEEFB;
-  margin-left: 5px;
-  margin-top: 9rem;
-}
-
-.logo{
-  height: 96px;
-  width: 96px;
-}
-.post-box{
   width: 100%;
-  height: 75px;
-  word-break: break-word;
 }
-.post-box li{
-  font-size: 2.5rem;
-  list-style: none;
-  background-color:  #3C86AC;
-  margin: 2px;
+.show-header-div {
+  position: fixed;
+  width: 100%;
+  height: 90px;
+  top: 0;
+  background-color: bisque;
+}
+/* nav.show-navbar {
+  display: flex;
+  justify-self: start;
+  position: fixed;
+  background: aquamarine;
+  height: -webkit-fill-available;
+}
+main.main-show {
   display: grid;
-  justify-content: space-between;
-  justify-items: end;
-  align-items: end;
-  grid-template-areas: "img p .. ..  button"
-                       "img .. a .. form";
-  grid-template-columns: auto 42px 1fr 30px 30px;
-  grid-template-rows: max-content;
-}
-.post-content{
-  justify-self:normal;
-  align-self: end;
-  margin: 0;
-}
-.author{
- font-size: 1rem;
- align-self: flex-start;
-}
-
-.del-form{
-  align-self: flex-start;
-}
-
-.edit-post {
-  height: 200px;
-  width: 350px;
-  background: darkorchid;
-  box-shadow: brown;
-  border-radius: 5px;
-  box-shadow: 5px 5px 15px blueviolet;
-  display: grid;
-  align-content: space-around;
-  justify-items: start;
-  font-size: 3rem;
-}
+  justify-content: start;
+  margin-left: 95px;
+  margin-top: 95px;
+} */
