--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -58,6 +58,7 @@
           alt="<%= user.profile.name %> avatar"
         class="profile-image">
         <% } %> 
+        <%= user.profile.name %> 
       <p>
         <%= post.content %> 
       </p>
@@ -76,6 +77,9 @@
                 alt="<%= user.profile.name %> avatar"
               class="profile-image">
               <% } %> 
+              <p>
+                <%= user.profile.name %> 
+              </p>
             <p>
               <%= reply.content %> 
             </p>
