--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -77,10 +77,10 @@
                 alt="<%= user.profile.name %> avatar"
               class="profile-image">
               <% } %> 
-              <p>
+              <p class="name">
                 <%= user.profile.name %> 
               </p>
-            <p>
+            <p class="reply-content">
               <%= reply.content %> 
             </p>
           </div>
