--- a/views/posts/timeline.ejs
+++ b/views/posts/timeline.ejs
@@ -45,6 +45,27 @@
         </div>
   </section>
   <section class="section-2">
+  </div>
+  <% posts.forEach(post => { %>
+    <div class="post-box">
+      <li>
+        <% if (user?.profile.avatar) { %>
+            <img 
+              src="<%= user.profile.avatar %>" 
+              alt="<%= user.profile.name %> avatar"
+            class="profile-image">
+            <% } %> 
+            <p class="author"><%= user.profile.name %> </p>
+       <p class="post-content"> <%= post.content %></p>
+        <a href="/posts/<%= post._id %>" class="post-id">...</a>
+        <form action="/posts/<%= post._id %>?_method=DELETE" method="POST" class="del-form">
+          <button type="submit">X
+          </button>
+        </form>
+      </li>
+        <% }) %>
+    </div>
+      </div>
   </section>
 </main>
 <form
