--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -50,7 +50,7 @@
     </li>
   </ul>
   </nav>
-  <main>
+  <main class="show">
     <div class="edit-post">
       <% if (user?.profile.avatar) { %>
         <img 
