--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,6 +78,28 @@ main {
   margin-left: 10rem;
   height: 100%;
   flex-wrap: wrap;
+  max-width: 100vw;
+}
+
+main.show {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  margin-left: 10rem;
+  height: 100%;
+  flex-wrap: wrap;
+  max-width: 100vw;
+}
+main.index {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  margin-left: 10rem;
+  height: 100%;
+  flex-wrap: wrap;
+  max-width: 100vw;
 }
 
 h1 {
@@ -87,16 +109,29 @@ h1 {
 .section-1{
   width: 50%;
   height: 100vw;
-  background-color: #DCEEFB;
-  margin-left: 5px;
+  background-color: darkorchid;
+  box-shadow: 5px 5px 15px blueviolet;
   margin-top: 9rem;
+  max-width: 400px;
+  max-height: 300px;
+  border-radius: 5px;
+}
+.index-section-1{
+  height: 100vw;
+  margin-top: 9rem;
+  max-height: 300px;
+  border-radius: 5px;
+  width: 700px;
+  
 }
 .section-2{
   width: 50%;
-  height: 100vw;
-  background-color: #DCEEFB;
+  height: 100vw; 
   margin-left: 5px;
   margin-top: 9rem;
+  max-width: 700px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px blueviolet;
 }
 
 .logo{
@@ -108,10 +143,14 @@ h1 {
   height: 75px;
   word-break: break-word;
 }
+.index-post-box{
+  width: 100%;
+  height: 75px;
+  word-break: break-word;
+}
 .post-box li{
   font-size: 2.5rem;
   list-style: none;
-  background-color:  #3C86AC;
   margin: 2px;
   display: grid;
   justify-content: space-between;
@@ -121,6 +160,22 @@ h1 {
                        "img .. a .. form";
   grid-template-columns: auto 42px 1fr 30px 30px;
   grid-template-rows: max-content;
+  box-shadow: 5px 5px 15px blueviolet;
+}
+.index-li{
+  font-size: 2.5rem;
+  list-style: none;
+  margin: 2px;
+  display: grid;
+  justify-content: space-between;
+  justify-items: end;
+  align-items: end;
+  grid-template-areas: "img p .. ..  button"
+                       "img .. a .. form";
+  grid-template-columns: auto 42px 1fr 30px 30px;
+  grid-template-rows: max-content;
+  box-shadow: 5px 5px 15px blueviolet;
+  border-radius: 10px;
 }
 .post-content{
   justify-self:normal;
