Fix landing page

--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title><%= title %></title>
+    <title>BEEPER</title>
     <div class="header-div">
       <h1 class="header">BEEPER</h1>
     </div>
