--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,7 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
 
-<main>
- 
+<main class="main-index">
   <% if (!user) { %>
   <a href="/auth/google" class="siwg-link">
     <button type="submit" class="siwg">
