--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/index.css" />
     <title>BEEPER</title>
-    <div class="header-div">
+    <header class="header-div">
       <h1 class="header">BEEPER</h1>
-    </div>
+    </header>
     <% if (!user) { %>
       <link rel="stylesheet" href="/stylesheets/siwg.css">
     <% } %>
   </head>
-    
-    
