--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ html {
 :root {
     font-size: 62.5%
 }
-head{
+/* head{
   position: fixed;
 }
 .header-div{
@@ -61,9 +61,8 @@ head{
   margin-top: auto;
 }
 body {
-  background-image: linear-gradient(to left, #551a8b, #5d2691, #663196, #6e3c9c, #7646a1, #8259ac, #8e6bb7, #9b7ec1, #b19ed2, #c9bee2, #e3def1, #ffffff);
-  /* Use a system font, if none are available use an available sans-sarif font */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  background-image: linear-gradient(to left, #551a8b, #5d2691, #663196, #6e3c9c, #7646a1, #8259ac, #8e6bb7, #9b7ec1, #b19ed2, #c9bee2, #e3def1, #ffffff); */
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
   height: 100%;
@@ -123,8 +122,8 @@ h1 {
   border-radius: 5px;
   width: 700px;
   
-}
-.section-2{
+} */
+/* .section-2{
   width: 50%;
   height: 100vw; 
   margin-left: 5px;
@@ -181,8 +180,8 @@ h1 {
   justify-self:normal;
   align-self: end;
   margin: 0;
-}
-.author{
+} */
+/* .author{
  font-size: 1rem;
  align-self: flex-start;
 }
@@ -227,5 +226,5 @@ h1 {
 }
 p.name{
   max-width: 37px;
-}
+} */
 
