--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,83 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.show-header-div {
+  position: fixed;
+  width: 100%;
+  height: 90px;
+  top: 0;
+  background-color: bisque;
+}
+
+.main-index {
+  margin: 1px;
+}
+
+body {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-box {
+  position: relative;
+  height: 800px;
+  width: 480px;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  overflow-y: hidden;
+  border-bottom: 90px;
+}
+
+.container-box:hover {
+  overflow-y: scroll;
+}
+
+header {
+  text-align: center;
+}
+
+nav {
+  margin-top: auto;
+  bottom: 0;
+  width: 100%;
+  position: absolute;
+  height: 90px;
+  background-color: burlywood;
+}
+
+nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav ul li {
+  margin: 5px;
+  min-width: 50px;
+}
+
+.nav-list::last-child {
+  margin-top: auto;
+}
+
 body {
   background-color: bisque;
 }
