--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -1,16 +1,16 @@
-// @import './sass/1-abstracts/variables';
-// @import './sass/1-abstracts/mixins';
+@import './sass/1-abstracts/variables';
+@import './sass/1-abstracts/mixins';
 
-// @import './sass/2-base/global';
+@import './sass/2-base/global';
 
-// @import './sass/3-layouts/details';
+@import './sass/3-layouts/navbar';
 // @import './sass//3-layouts/landing-page';
 // @import './sass//3-layouts/signup-login';
 // @import './sass/3-layouts/profile';
 
 // @import './sass//4-components/form';
 // @import './sass/4-components/nav';
-@import './sass/3-layouts/profile';
+@import './sass/3-layouts/timeline';
 
 
 
