--- a/public/stylesheets/sass/2-base/_global.scss
+++ b/public/stylesheets/sass/2-base/_global.scss
@@ -1,44 +1,54 @@
 html {
   box-sizing: border-box;
-  
-  height: 100%;
+  // height: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
-body {
-  margin: 0;
-  background-color: #28394d;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  height: 100%;
-  padding-bottom: 30px;
-  font-family: $text;
+// body {
+//   margin: 0;
+//   background-color: #28394d;
+//   display: flex;
+//   flex-direction: column;
+//   overflow-x: hidden;
+//   height: 100%;
+//   font-family: $text;
+// }
+
+
+// body{
+//   margin: 0%;
+//   height: 100%;
+//   width: 100%;
+// }
+.show-header-div {
+  position: fixed;
+  width: 100%;
+  height: 90px;
+  top: 0;
+  background-color: bisque;
 }
-
-
-nav{
-  width: max-content;
-  ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-        li{
-          padding: 5px 0 5px 0;
-        }
+.main-index{
+  margin: 1px;
+}
+body{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-box {
+  position: relative;
+  height: 800px;
+  width: 480px;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  overflow-y: hidden;
+  &:hover{
+    overflow-y: scroll;
   }
+  border-bottom: 90px;
 }
-
-span{
-  font: $head;
-}
-
-#root{
-  display: flex;
-  flex-direction: column;
-}
-a,link{
-  text-decoration: none;
+header{
+  text-align: center;
 }
