--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,74 +1,4 @@
-html {
-  box-sizing: border-box;
-  height: 100%;
-}
-
-/* The Universal Selector */
-*, /* All elements*/
-*::before, /* All ::before pseudo-elements */
-*::after { /* All ::after pseudo-elements */
-  /* height & width will now include border & padding by default
-     but can be over-ridden as needed */
-  box-sizing: inherit;
-}
-
-/* resets font size to be 62.5% of the user preference - 
-     in most browser configurations this will be 10px */
-:root {
-    font-size: 62.5%
-}
-/* head{
-  position: fixed;
-}
-.header-div{
-  display: grid;
-  grid-template-areas: " h1 ";
-  position:fixed;
-    top:0;
-    width:100%;
-    z-index:100;
-    background-color: #d5c6e2;
-}
-.header{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.logo{
-  width: 192px;
-  height: 192px;
-  display: inline-block;
-  background: url(/public/images/pager_favicon/android-chrome-192x192.png);
-}
-.navbar {
-  background-color: #d5c6e2;
-  font-size: 1.6rem;
-  height: 100vh;
-  width: 10rem;
-  position: fixed;
-}
-.nav-ul{
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.nav-ul li{
-  margin: 5px;
-}
-
-.nav-list::last-child{
-  margin-top: auto;
-}
-body {
-  background-image: linear-gradient(to left, #551a8b, #5d2691, #663196, #6e3c9c, #7646a1, #8259ac, #8e6bb7, #9b7ec1, #b19ed2, #c9bee2, #e3def1, #ffffff); */
-  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  margin: 0;
-  height: 100%;
-}
-
-
+/*  
 main {
   display: flex;
   align-items: center;
@@ -133,10 +63,6 @@ h1 {
   box-shadow: 5px 5px 15px blueviolet;
 }
 
-.logo{
-  height: 96px;
-  width: 96px;
-}
 .post-box{
   width: 100%;
   height: 75px;
