--- a/public/stylesheets/sass/2-base/_global.scss
+++ b/public/stylesheets/sass/2-base/_global.scss
@@ -36,6 +36,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .container-box {
   position: relative;
@@ -47,7 +48,6 @@ body{
   &:hover{
     overflow-y: scroll;
   }
-  border-bottom: 90px;
 }
 header{
   text-align: center;
